# Information-operations-directed-at-Hong-Kong

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  detect_community.py  pyproject.toml  twitter_eda.ipynb  推特香港bang的中文帳號EDA.ipynb
configs/: config.example.yaml
docs/: ethics_and_compliance.md  methods_mapping.md  research_questions.md
notebooks/: 01_project_setup.ipynb
src/opinion_lab/: __init__.py  analysis.py  cli.py  ingestion.py  preprocessing.py  privacy.py  utils.py  visualization.py
tests/: test_pipeline_minimal.py  test_privacy.py  test_smoke.py
