[project]
name = "opinion-lab"
version = "0.1.0"
description = "A reproducible opinion observatory scaffold for academic research workflows."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Opinion Lab Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
opinion-lab = "opinion_lab.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]
